# Multimodal-Node-Editor

./: .gitignore  Node_Development_Guide.md  README.md  README_EN.md  headless_api.py  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements-gpu.txt  requirements.txt  run_gui.py  worklog.md
clients/python/: README.md  __init__.py  multimodal_client.py  test_async_client.py  test_client.py  test_client2.py  test_http_client_vs_gui.py
mini-services/node-editor-server/: core.py  discovery.py  headless_api.py  main.py  model_registry.py  models.py  node_def.py  package.json  run_headless.py
mini-services/node-editor-server/node_editor/: __init__.py  image_utils.py  model_registry.py  node_def.py  settings.py
mini-services/node-editor-server/nodes/communication/: category.toml
mini-services/node-editor-server/nodes/communication/input/: impl.py  node.toml
mini-services/node-editor-server/nodes/communication/mqtt_receive/: impl.py  node.toml
mini-services/node-editor-server/nodes/communication/mqtt_send/: impl.py  node.toml
mini-services/node-editor-server/nodes/dora/: category.toml
mini-services/node-editor-server/nodes/logic/: category.toml
src/app/: globals.css  layout.tsx  page.tsx
src/components/node-editor/: ConfigPanel.tsx  CustomNode.tsx  InteractiveCanvas.tsx  ModelsPanel.tsx  NodePalette.tsx
src/components/ui/: input.tsx  scroll-area.tsx  textarea.tsx
src/gui/reactflow/frontend/: package-lock.json
src/lib/node-editor/: api.ts  types.ts
src/node_editor/: core.py  image_utils.py  node_def.py
(+84 files in other folders)
