[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiortc>=1.14.0",
    "av>=16.1.0",
    "fastapi>=0.135.1",
    "google-cloud-speech>=2.37.0",
    "mediapipe>=0.10.32",
    "motpy>=0.0.10",
    "onnx>=1.20.1",
    "onnxruntime>=1.24.3",
    "openai>=2.26.0",
    "opencv-python>=4.11.0.86",
    "pillow>=12.1.1",
    "platformdirs>=4.9.4",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.22",
    "sahi>=0.11.36",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "uvicorn[standard]>=0.41.0",
    "vosk>=0.3.45",
    "webrtcvad-wheels>=2.0.14",
    "websocket-client>=1.9.0",
]
